css/queries.css
/* CAROUSEL - Below 1400px - 87,5em */

@media (max-width: 87.5em) {
  .container {
    display: grid;
    grid-template-areas: 'sidebar sidebar sidebar sidebar' 'sidebar sidebar sidebar sidebar' 'gallery gallery gallery gallery' 'gallery gallery gallery gallery' 'btmline btmline btmline btmline';
    grid-auto-columns: repeat(auto-fit, minmax(-10rem, 1fr));
    grid-template-rows: 35vh repeat(2, auto-fit) 1fr;
  }

  .bar-top {
    visibility: hidden;
  }

  .sidebar {
    flex-direction: column;
    justify-content: space-between;
    margin-right: 0;
    min-width: min-content;
  }

  .sidebar-nav {
    margin-top: 2rem;
    flex-direction: row;
  }

  .sidebar-nav__link {
    transform: rotate(360deg);
  }

  .sidebar-nav__link:hover,
  .sidebar-nav__link:active {
    transform: rotate(360deg) translateY(-3px);
  }

  .sidebar-name {
    writing-mode: horizontal-tb;
    transform: rotate(360deg);
    margin-right: 0;
    margin-left: 0;
    padding-bottom: 0;
  }

  .gallery {
    align-content: center;
    padding-right: 0;
    padding-left: 3rem;
    min-height: 100%;
    margin-top: 0;
    margin-left: 0;
    margin-right: 0;
    margin-bottom: 0;
  }

  .fading-slideshow {
    max-height: fit-content;
  }

  .bar-btm {
    justify-content: flex-end;
    max-width: max-content;
  }
}

/* TABLETS - Below 900px - 56,25em */

@media (max-width: 56.25em) {
  .container {
    grid-auto-rows: minmax(fit-content);
    grid-auto-columns: minmax(fit-content);
  }

  .nav__link:link,
  .nav__link:visited {
    font-size: 1.3rem;
  }

  .sidebar-name {
    font-size: 6.5rem;
  }

  .gallery {
    padding-left: 1rem;
    padding-top: 2rem;
    padding-right: 0.4rem;
    padding-bottom: 3rem;
  }

  .fading-slideshow {
    object-fit: cover;
    margin-top: 5%;
    margin-bottom: 5%;
  }

  .description {
    font-size: 1rem;
    padding-right: 1rem;
  }

  .pdf__link:link,
  .pdf__link:visited {
    padding: 1rem;
    margin-top: 1rem;
    font-size: 1.5rem;
  }

  .bar-btm {
    justify-content: center;
    max-height: fit-content;
    margin-top: 10%;
  }
}

/* SMALL TABLETS - Below 700px - 43,75em */

@media (max-width: 43.75em) {
  .container {
    font-size: 1rem;
    grid-auto-rows: minmax(fit-content);
    grid-auto-columns: minmax(fit-content);
  }

  .sidebar {
    justify-content: space-around;
  }

  .sidebar-name {
    font-size: 5rem;
    margin-bottom: -12%;
  }

  .sidebar-nav {
    justify-content: space-evenly;
    align-content: center;
    padding-left: 0;
  }

  .bar-btm {
    font-size: 4rem;
    margin-top: 0%;
    magin-bottom: 0%;
    padding: 0;
  }

  .nav__link:link,
  .nav__link:visited {
    font-size: 1rem;
  }

  .gallery {
    background-image: none;
    padding: -5%;
    margin: -5%;
    margin-left: -10%;
  }

  .slideshow-img {
    min-width: 100%;
    max-height: 100%;
  }
}

/* MOBILE - Below 500px - 31,25em */

@media (max-width: 31.25em) {
  .container {
    font-size: 1rem;
    grid-auto-rows: minmax(fit-content);
    grid-auto-columns: minmax(fit-content);
  }

  .sidebar-nav {
    justify-content: space-evenly;
    align-content: center;
    padding-left: 0;
  }

  .header {
    font-size: 4rem;
  }

  .description {
    gap: 0.5rem;
  }

  .bar-btm {
    font-size: 3rem;
    margin-top: -30%;
    magin-bottom: 0%;
    padding: 0;
  }

  .gallery {
    margin-left: -14%;
    margin-right: -2%;
    margin-bottom: -50%;
    z-index: -10000000;
  }

  .pdf__link:link,
  .pdf__link:visited {
    margin-top: 40%;
  }
}

/* MOBILE - Below 400px - 25em */

@media (max-width: 25em) {
  .container {
    font-size: 0.5rem;
    grid-auto-rows: minmax(fit-content);
    grid-auto-columns: minmax(fit-content);
  }

  .sidebar-nav {
    padding: 0;
    margin: 0;
    gap: 2rem;
    justify-content: center;
    margin-left: 0%;
    font-size: 0.3rem;
  }

  .header {
    font-size: 5rem;
    margin-left: 0%;
    justify-content: center;
    flex-direction: column;
    line-height: 5rem;
  }

  .bar-btm {
    font-size: 3rem;
    margin-top: -30%;
    magin-bottom: 0%;
    padding: 0;
  }

  .description {
    margin-top: -20%;
    flex-wrap: wrap;
    flex-direction: row;
  }

  .gallery {
    margin-left: -16.5%;
    margin-right: -2%;
    margin-bottom: 0%;
    z-index: -10000000;
  }

  .pdf__link:link,
  .pdf__link:visited {
    margin-top: 2%;
    justify-content: center;
  }

  .pdf__link:hover,
  .pdf__link:active {
    padding-right: 10%;
    justify-content: center;
  }

  .info {
    padding-top: 2%;
    justify-content: center;
  }
}

